k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-cd-spring-app-service
spec:
  selector:
    app: ci-cd-spring-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
